--- a/pages/index.css
+++ b/pages/index.css
@@ -3,7 +3,7 @@
     max-width: 1600px;
     margin: 0 auto;
     font-family: "Inter", Arial, sans-serif;
-    font-weight: 400 500 700;
+    font-weight: 500;
     font-size: 16px;
     line-height: 20px;
 } 
