--- a/pages/index.css
+++ b/pages/index.css
@@ -5,4 +5,73 @@
     font-family: "Inter", Arial, sans-serif;
     font-size: 16px;
     line-height: 20px;
-} 
+}
+
+.header {
+    padding: 30px 80px 40px;
+    min-height: 720px;
+    max-height: 800px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.header__title {
+    max-width: 729px;
+    font-size: 60px;
+    font-weight: 500;
+    line-height: 70px;
+    margin: 183px 0 0;
+    letter-spacing: -0.6px;
+}
+
+.header__description {
+    max-width: 683px;
+    font-size: 20px;
+    line-height: 30px;
+    margin: 28px 0 0;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav__logo {
+    position: relative;
+    left: -50px;
+    width: 105px;
+    height: 39px;
+}
+
+.nav__link {
+    color: #000;
+    text-decoration: none;
+}
+
+.nav__links {
+    display: flex;
+    gap: 20px;
+    list-style-type: none;
+}
+
+.header__span-accent{
+    display: block;
+}
+
+.header__footer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: auto;
+}
+
+.header__paragraph {
+    margin: 0;
+}
+
+.events__image {
+    position: absolute;
+    top: 124px;
+    right: 5px;
+    max-width: 646px;
+}
