--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
     font-family: "Inter", Arial, sans-serif;
     font-size: 16px;
     line-height: 20px;
+    background-color: #fff;
 }
 
 .header {
@@ -20,7 +21,7 @@
     max-width: 729px;
     font-size: 60px;
     font-weight: 500;
-    line-height: 70px;
+    line-height: 72px;
     margin: 183px 0 0;
     letter-spacing: -0.6px;
 }
@@ -53,6 +54,8 @@
     display: flex;
     gap: 20px;
     list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 .header__footer {
@@ -63,11 +66,35 @@
 
 .header__paragraph {
     margin: 0;
+    right: 80px;
+    bottom: 40px;
 }
 
-.events__image {
+.header__span-accent {
+    color: #2F80ED;
+    left: 80px;
+    max-width: 729px;
+}
+
+.header__image {
     position: absolute;
     top: 124px;
     right: 5px;
-    max-width: 646px;
+    width: 646px;
+    height: 568px;
+}
+
+.recipes {
+    padding: 100px 80px 215px;
+}
+
+.recipes__videos {
+    display: flex;
+    gap: 100;
+    justify-content: space-evenly;
+}
+
+.recipes__videos-caption {
+    display: flex;
+    justify-content: space-between;
 }
