--- a/pages/index.css
+++ b/pages/index.css
@@ -15,6 +15,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
+    z-index: -1;
 }
 
 .header__title {
@@ -80,8 +81,8 @@
     position: absolute;
     top: 124px;
     right: 5px;
-    width: 646px;
-    height: 568px;
+    max-width: 646px;
+    max-height: 568px;
 }
 
 .recipes {
