--- a/pages/index.css
+++ b/pages/index.css
@@ -15,7 +15,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    z-index: -1;
+    position: relative;
 }
 
 .header__title {
@@ -69,6 +69,7 @@
     margin: 0;
     right: 80px;
     bottom: 40px;
+    align-items: end;
 }
 
 .header__span-accent {
@@ -99,3 +100,5 @@
     display: flex;
     justify-content: space-between;
 }
+
+.recipes__iframe {}
