--- a/pages/index.css
+++ b/pages/index.css
@@ -5,7 +5,6 @@
     font-family: "Inter", Arial, sans-serif;
     font-size: 16px;
     line-height: 20px;
-    background-color: #fff;
 }
 
 .header {
@@ -70,10 +69,11 @@
     right: 80px;
     bottom: 40px;
     align-items: end;
+    color: #6f6f6f;
 }
 
 .header__span-accent {
-    color: #2F80ED;
+    color: #2f80ed;
     left: 80px;
     max-width: 729px;
 }
@@ -84,10 +84,12 @@
     right: 5px;
     max-width: 646px;
     max-height: 568px;
+    z-index: -1;
 }
 
 .recipes {
     padding: 100px 80px 215px;
+    color: #0a2750;
 }
 
 .recipes__videos {
@@ -101,4 +103,6 @@
     justify-content: space-between;
 }
 
-.recipes__iframe {}
+.recipes__iframe {
+    border: 0;
+}
