My new project2 stage 3

--- a/pages/index.css
+++ b/pages/index.css
@@ -110,3 +110,71 @@
 .recipes__iframe {
     border: 0;
 }
+
+.reservation {
+    padding: 100px 0 120px;
+    background-color: #d9e7ff;
+}
+
+.reservation__title {
+    margin: 0 0 80px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 44px;
+    line-height: 52px;
+
+}
+
+.reservation__form {
+    margin: 0 auto;
+}
+
+.form {
+    max-width: 385px;
+}
+
+.form__fieldset {
+    padding: 0;
+    margin: 0;
+    border: none;
+}
+
+.form__label {
+    margin-bottom: 32px;
+    display: block;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 500;
+}
+
+.form__label_type_checkbox {
+    display: flex;
+    justify-content: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    border-radius: 2px;
+}
+
+.form__input {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    margin-top: 8px;
+    border-radius: 4px;
+}
+
+.form__button {
+    width: 100%;
+    padding: 0;
+    margin-bottom: 32px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    border-radius: 4px;
+    background-color: #2f80ed;
+}
+
+.form__input::placeholder {
+    color: #838383;
+}
