--- a/pages/index.css
+++ b/pages/index.css
@@ -167,6 +167,7 @@
 .form__button {
     width: 100%;
     padding: 0;
+    margin-bottom: 32px;
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
