--- a/pages/index.css
+++ b/pages/index.css
@@ -1,180 +1,11 @@
-.page {
-    min-width: 1100px;
-    max-width: 1600px;
-    margin: 0 auto;
-    font-family: "Inter", Arial, sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.header {
-    padding: 30px 80px 40px;
-    min-height: 720px;
-    max-height: 800px;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-}
-
-.header__title {
-    max-width: 729px;
-    font-size: 60px;
-    font-weight: 500;
-    line-height: 72px;
-    margin: 183px 0 0;
-    letter-spacing: -0.6px;
-}
-
-.header__description {
-    max-width: 683px;
-    font-size: 20px;
-    line-height: 30px;
-    margin: 28px 0 0;
-}
-
-.nav {
-    display: flex;
-    justify-content: space-between;
-}
-
-.nav__logo {
-    position: relative;
-    left: -50px;
-    width: 105px;
-    height: 39px;
-}
-
-.nav__link {
-    color: #000;
-    text-decoration: none;
-}
-
-.nav__links {
-    display: flex;
-    gap: 20px;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.header__footer {
-    display: flex;
-    justify-content: space-between;
-    margin-top: auto;
-}
-
-.header__paragraph {
-    margin: 0;
-    right: 80px;
-    bottom: 40px;
-    align-items: end;
-    color: #838383;
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: 500;
-}
-
-.header__span-accent {
-    color: #2f80ed;
-    left: 80px;
-    max-width: 729px;
-    display: block;
-}
-
-.header__image {
-    position: absolute;
-    top: 124px;
-    right: 5px;
-    max-width: 646px;
-    max-height: 568px;
-    z-index: -1;
-}
-
-.recipes {
-    padding: 100px 80px 215px;
-    background-color: #0A2750;
-}
-
-.recipes__videos {
-    display: flex;
-    gap: 100px;
-    justify-content: center
-}
-
-.recipes__videos-caption {
-    display: flex;
-    justify-content: space-between;
-}
-
-.recipes__iframe {
-    border: 0;
-}
-
-.reservation {
-    padding: 100px 0 120px;
-    background-color: #d9e7ff;
-}
-
-.reservation__title {
-    margin: 0 0 80px;
-    text-align: center;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
-
-}
-
-.reservation__form {
-    margin: 0 auto;
-}
-
-.form {
-    max-width: 385px;
-}
-
-.form__fieldset {
-    padding: 0;
-    margin: 0;
-    border: none;
-}
-
-.form__label {
-    margin-bottom: 32px;
-    display: block;
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: 500;
-}
-
-.form__label_type_checkbox {
-    display: flex;
-    justify-content: center;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    border-radius: 2px;
-}
-
-.form__input {
-    display: block;
-    width: 100%;
-    box-sizing: border-box;
-    margin-top: 8px;
-    border-radius: 4px;
-}
-
-.form__button {
-    width: 100%;
-    padding: 0;
-    margin-bottom: 32px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    border-radius: 4px;
-    background-color: #2f80ed;
-}
-
-.form__input::placeholder {
-    color: #838383;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
+@import url(../blocks/about.css);
+@import url(../blocks/card.css);
+@import url(../blocks/footer.css);
+@import url(../blocks/menu.css);
