--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,3 +1,5 @@
+/* Keyframe */
+
 .about {
     padding: 100px 80px;
     overflow: hidden;
@@ -48,4 +50,19 @@
     border-radius: 50%;
 }
 
-@keyframes
+.about__circle_animation_blurred {
+    animation: pulsate 1.3s infinite ease-in-out;
+}
+
+@keyframes pulsate {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.6;
+    }
+    100% {
+        opacity: 0;
+        transform: scale(1.2);
+    }
+}    
