--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -6,13 +6,25 @@
 
 .footer__content {
     display: flex;
+    justify-content: space-between;
 }
 
-.footer__copyright {
-    font-weight: normal;
+.footer__logo {
+    width: 105px;
+    height: 39px;
+}
+
+.footer__social-heading {
+    display: flex;
+    font-family: "Inter", Arial, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    justify-content: end;
+    margin: 0;
+    color: #fff;
+    margin-bottom: 20px;
     font-size: 16px;
     line-height: 20px;
-    margin: 108px 0 0;
 }
 
 .footer__list {
@@ -22,20 +34,42 @@
 }
 
 .footer__list-item {
-
-}
-
-.footer__logo {
-    width: 105px;
-    height: 39px;
+    list-style-type: none;
+    margin-bottom: 16px;
+    color: #fff;
 }
 
 .footer__social-icon {
-
+    width: 16px;
+    height: 16px;
+    margin-right: 10px;
 }
 
-.footer__social-link {}
+.footer__social-link {
+    font-size: 16px;
+    line-height: 20px;
+    opacity: 100%;
+    transition-duration: 5%;
+    color: #fff;
+    font-style: normal;
+    align-items: center;
+    display: flex;
+    font-family: "Inter", Arial, sans-serif;
+    font-weight: normal;
+}
 
-.footer__social-heading {
-    margin: auto
+.footer__social-link:hover {
+    color: #c1c1c1;
+    opacity: 70%;
+}
+
+.footer__copyright {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    margin: 108px 0 0;
+}
+
+.footer__list-item:last-child {
+    margin-bottom: 0;
 }
