--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,13 +1,24 @@
 .menu {
     padding: 100px 0 100px;
+    background: #fff;
+    background-image: url(../images/background_menu.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .menu__title {
+    color: #000;
     text-align: center;
     margin: 0 0 24px;
     font-weight: 500;
     font-size: 44px;
     line-height: 52px;
+    font-style: normal;
+    font-family: "inter", Arial, sans-serif;
 }
 
 .menu__subtitle {
@@ -16,6 +27,8 @@
     font-weight: normal;
     font-size: 20px;
     line-height: 30px;
+    font-family: "Noto Serif";
+    max-width: 780px;
 }
 
 .menu__cards {
