--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,19 +1,56 @@
 .recipes {
     padding: 100px 80px 215px;
     background-color: #0A2750;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    background-image: url(../images/background_recipes.svg);
+}
+
+.recipes__title {
+    max-width: 580px;
+    margin: 0 0 24px;
+    font-family: "Inter" Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 44px;
+    line-height: 52px;
+    color: #fff;
+}
+
+.recipes__subtitle {
+    max-width: 438px;
+    margin: 0 0 80px;
+    font-family: "Noto Serif";
+    font-style: normal;
+    font-size: 20px;
+    line-height: 30px;
+    color: #fff;
+
 }
 
 .recipes__videos {
     display: flex;
     gap: 100px;
-    justify-content: center
+    justify-content: center;
+    margin: auto;
 }
 
 .recipes__videos-caption {
     display: flex;
     justify-content: space-between;
+    margin: 24px 0 0;
+    font-family: "inter", Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    color: #fff;
 }
 
 .recipes__iframe {
     border: 0;
+    width: 480px;
+    height: 273px;
 }
