--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -18,7 +18,7 @@
     font-size: 44px;
     line-height: 52px;
     font-style: normal;
-    font-family: "inter", Arial, sans-serif;
+    font-family: "Inter";
 }
 
 .menu__subtitle {
