--- a/blocks/card.css
+++ b/blocks/card.css
@@ -6,6 +6,9 @@
     padding: 0;
     margin: 0;
     list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 
 .card__title {
@@ -13,7 +16,7 @@
 }
 
 .card__list-item {
-    margin-top: 16px;
+    margin-bottom: 16px;
     display: flex;
     font-weight: bold;
     font-size: 20px;
