--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -11,7 +11,7 @@
 .recipes__title {
     max-width: 580px;
     margin: 0 0 24px;
-    font-family: "Inter" Arial, sans-serif;
+    font-family: "Inter";
     font-style: normal;
     font-weight: 500;
     font-size: 44px;
@@ -24,6 +24,7 @@
     margin: 0 0 80px;
     font-family: "Noto Serif";
     font-style: normal;
+    font-weight: normal;
     font-size: 20px;
     line-height: 30px;
     color: #fff;
@@ -41,7 +42,7 @@
     display: flex;
     justify-content: space-between;
     margin: 24px 0 0;
-    font-family: "inter", Arial, sans-serif;
+    font-family: "Inter";
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
