--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,6 +1,6 @@
 .recipes {
     padding: 100px 80px 215px;
-    background-color: #0A2750;
+    background-color: #0a2750;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
