--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,8 +1,20 @@
-/* Keyframe */
+@keyframes pulsate {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.6;
+    }
+    100% {
+        opacity: 0;
+        transform: scale(1.2);
+    }
+}
 
 .about {
     padding: 100px 80px;
     overflow: hidden;
+    font-style: normal;
     font-weight: normal;
     font-size: 20px;
     line-height: 30px;
@@ -15,8 +27,9 @@
 
 .about__title {
     margin: 0;
-    font-size: 20px;
-    line-height: 30px;
+    font-style: normal;
+    font-size: 44px;
+    line-height: 52px;
     font-weight: 500;
     max-width: 251px;
     z-index: 1;
@@ -34,6 +47,9 @@
 
 .about__paragraph {
     margin: 0 0 32px;
+    font-size: 20px;
+    line-height: 30px;
+    font-style: normal;
 }
 
 .about__paragraph:last-child {
@@ -53,16 +69,3 @@
 .about__circle_animation_blurred {
     animation: pulsate 1.3s infinite ease-in-out;
 }
-
-@keyframes pulsate {
-    0% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 0.6;
-    }
-    100% {
-        opacity: 0;
-        transform: scale(1.2);
-    }
-}    
