--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -1,6 +1,7 @@
 .reservation {
     padding: 100px 0 120px;
-    background-color: #d9e7ff;
+    background-color: #D9E7FF;
+    background-image: url(../images/background_reservation.svg);
 }
 
 .reservation__title {
