--- a/blocks/form.css
+++ b/blocks/form.css
@@ -11,6 +11,8 @@
 
 .form__label {
     margin-bottom: 32px;
+    font-family: "Inter";
+    font-style: normal;
     display: block;
     font-size: 16px;
     line-height: 20px;
@@ -38,6 +40,8 @@
 .form__button {
     width: 100%;
     padding: 0;
+    font-family: "Inter";
+    font-style: normal;
     margin-bottom: 32px;
     font-weight: 500;
     font-size: 16px;
