--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -21,4 +21,7 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
 }
