--- a/blocks/about.css
+++ b/blocks/about.css
@@ -35,6 +35,7 @@
     max-width: 251px;
     z-index: 1;
     position: relative;
+    color: #fff;
 }
 
 .about__content {
@@ -53,6 +54,7 @@
     font-size: 20px;
     line-height: 30px;
     font-style: normal;
+    color: #fff;
 }
 
 .about__paragraph:last-child {
