--- a/blocks/form.css
+++ b/blocks/form.css
@@ -30,7 +30,7 @@
 
 .form__input {
     display: block;
-    padding: 0;
+    padding: 12px;
     width: 100%;
     box-sizing: border-box;
     margin-top: 8px;
@@ -39,7 +39,7 @@
 
 .form__button {
     width: 100%;
-    padding: 0;
+    padding: 12px;
     font-family: "Inter";
     font-style: normal;
     margin-bottom: 32px;
