--- a/blocks/about.css
+++ b/blocks/about.css
@@ -28,7 +28,7 @@
 .about__title {
     margin: 0;
     font-style: normal;
-    font-family: "Inter";
+    font-family: "Inter, Arial, sans-serif";
     font-size: 44px;
     line-height: 52px;
     font-weight: 500;
@@ -43,7 +43,7 @@
     line-height: 30px;
     font-weight: 400;
     font-style: normal;
-    font-family: "Noto Serif";
+    font-family: "Noto Serif", "Times New Roman", serif;
     max-width: 660px;
     z-index: 1;
     position: relative;
