--- a/blocks/card.css
+++ b/blocks/card.css
@@ -16,17 +16,16 @@
 }
 
 .card__list-item {
-    margin-bottom: 16px;
     display: flex;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 30px;
+    font-size: 16px;
+    line-height: 20px;
+    font-style: normal;
+    margin-bottom: 16px;
+    align-items: baseline;
+    font-family: "Noto serif";
 }
 
 .card__list-divider {
     border-bottom: 1px solid black;
     flex-grow:  1;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
 }
