--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -54,22 +54,22 @@
     font-style: normal;
     align-items: center;
     display: flex;
-    font-family: "Inter";
+    font-family: "Inter, Arial, sans-serif";
     font-weight: normal;
 }
 
 .footer__social-link:hover {
     color: #c1c1c1;
-    opacity: 70%;
 }
 
 .footer__copyright {
     font-weight: normal;
-    font-family: "Inter";
+    font-family: "Inter, Arial, sans-serif";
     font-style: normal;
     font-size: 16px;
     line-height: 20px;
     margin: 108px 0 0;
+    color: #fff;
 }
 
 .footer__list-item:last-child {
