--- a/blocks/form.css
+++ b/blocks/form.css
@@ -11,7 +11,7 @@
 
 .form__label {
     margin-bottom: 32px;
-    font-family: "Inter";
+    font-family: "Inter, Arial, sans-serif";
     font-style: normal;
     display: block;
     font-size: 16px;
@@ -22,8 +22,7 @@
 .form__label_type_checkbox {
     display: flex;
     justify-content: center;
-    font-weight: 500;
-    font-size: 16px;
+    font-size: 20px;
     line-height: 20px;
     border-radius: 2px;
 }
@@ -40,7 +39,7 @@
 .form__button {
     width: 100%;
     padding: 12px;
-    font-family: "Inter";
+    font-family: "Inter", Arial, sans-serif;
     font-style: normal;
     margin-bottom: 32px;
     font-weight: 500;
