--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -17,7 +17,7 @@
     font-size: 44px;
     line-height: 52px;
     font-style: normal;
-    font-family: "Inter";
+    font-family: "Inter, Arial, sans-serif";
     max-width: 780px;
 }
 
