--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -4,14 +4,13 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
     background-image: url(../images/background_recipes.svg);
 }
 
 .recipes__title {
     max-width: 580px;
     margin: 0 0 24px;
-    font-family: "Inter";
+    font-family: "Inter, Arial, sans-serif";
     font-style: normal;
     font-weight: 500;
     font-size: 44px;
@@ -22,7 +21,7 @@
 .recipes__subtitle {
     max-width: 438px;
     margin: 0 0 80px;
-    font-family: "Noto Serif";
+    font-family: "Noto Serif", "Times New Roman", serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
@@ -33,7 +32,7 @@
 
 .recipes__videos {
     display: flex;
-    gap: 100px;
+    gap: 40px;
     justify-content: center;
     margin: auto;
 }
@@ -42,7 +41,7 @@
     display: flex;
     justify-content: space-between;
     margin: 24px 0 0;
-    font-family: "Inter";
+    font-family: "Inter, Arial, sans-serif";
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
