--- a/blocks/header.css
+++ b/blocks/header.css
@@ -16,7 +16,7 @@
     max-width: 729px;
     font-size: 60px;
     font-weight: 500;
-    font-family: Inter, Arial, sans-serif;
+    font-family: "Inter", Arial, sans-serif;
     line-height: 72px;
     margin: 183px 0 0;
     letter-spacing: -0.6px;
