--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -6,7 +6,7 @@
 
 .reservation__title {
     margin: 0 0 80px;
-    font-family: "Inter, Arial, sans-serif";
+    font-family: "Inter", Arial, sans-serif;
     font-style: normal;
     text-align: center;
     font-weight: 500;
