--- a/blocks/about.css
+++ b/blocks/about.css
@@ -28,7 +28,7 @@
 .about__title {
     margin: 0;
     font-style: normal;
-    font-family: "Inter, Arial, sans-serif";
+    font-family: "Inter", Arial, sans-serif;
     font-size: 44px;
     line-height: 52px;
     font-weight: 500;
