--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -16,7 +16,7 @@
 
 .footer__social-heading {
     display: flex;
-    font-family: "Inter";
+    font-family: "Inter", Arial, sans-serif;
     font-style: normal;
     font-weight: bold;
     justify-content: end;
@@ -54,7 +54,7 @@
     font-style: normal;
     align-items: center;
     display: flex;
-    font-family: "Inter, Arial, sans-serif";
+    font-family: "Inter", Arial, sans-serif;
     font-weight: normal;
 }
 
@@ -64,7 +64,7 @@
 
 .footer__copyright {
     font-weight: normal;
-    font-family: "Inter, Arial, sans-serif";
+    font-family: "Inter", Arial, sans-serif;
     font-style: normal;
     font-size: 16px;
     line-height: 20px;
