--- a/blocks/form.css
+++ b/blocks/form.css
@@ -11,7 +11,7 @@
 
 .form__label {
     margin-bottom: 32px;
-    font-family: "Inter, Arial, sans-serif";
+    font-family: "Inter", Arial, sans-serifS;
     font-style: normal;
     display: block;
     font-size: 16px;
