--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -17,7 +17,7 @@
     font-size: 44px;
     line-height: 52px;
     font-style: normal;
-    font-family: "Inter, Arial, sans-serif";
+    font-family: "Inter", Arial, sans-serif;
     max-width: 780px;
 }
 
@@ -28,7 +28,7 @@
     font-weight: normal;
     font-size: 20px;
     line-height: 30px;
-    font-family: "Noto Serif";
+    font-family: "Noto Serif", "Times New Roman", serif;
     max-width: 780px;
 }
 
