--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -10,7 +10,7 @@
 .recipes__title {
     max-width: 580px;
     margin: 0 0 24px;
-    font-family: "Inter, Arial, sans-serif";
+    font-family: "Inter", Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 44px;
@@ -41,7 +41,7 @@
     display: flex;
     justify-content: space-between;
     margin: 24px 0 0;
-    font-family: "Inter, Arial, sans-serif";
+    font-family: "Inter", Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
