--- a/blocks/about.css
+++ b/blocks/about.css
@@ -12,7 +12,7 @@
 }
 
 .about {
-    padding: 100px 80px;
+    padding: 100px 80px 173px;
     overflow: hidden;
     font-style: normal;
     font-weight: normal;
@@ -21,7 +21,7 @@
     position: relative;
     box-sizing: border-box;
     display: flex;
-    gap: 120px;
+    justify-content: space-between;
     background-color: #0A2850;
 }
 
@@ -47,6 +47,8 @@
     max-width: 660px;
     z-index: 1;
     position: relative;
+    margin-top: 119px;
+    margin-bottom: 173px;
 }
 
 .about__paragraph {
