--- a/blocks/form.css
+++ b/blocks/form.css
@@ -22,9 +22,8 @@
 .form__label_type_checkbox {
     display: flex;
     justify-content: center;
-    font-size: 20px;
+    font-size: 16px;
     line-height: 20px;
-    border-radius: 2px;
 }
 
 .form__input {
@@ -46,9 +45,15 @@
     font-size: 16px;
     line-height: 20px;
     border-radius: 4px;
-    background-color: #2f80ed;
+    background-color: #2F80ED;
 }
 
 .form__input::placeholder {
     color: #838383;
+}
+
+.form__checkbox {
+    width: 20px;
+    height: 20px;
+    border-radius: 2px;
 }
