New project 2-stage-4

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -25,6 +25,10 @@
     font-family: "Noto serif", "Times New Roman", serif;
 }
 
+.card__list-item:last-child {
+    margin-bottom: 0;
+}
+
 .card__list-divider {
     border-bottom: 1px solid black;
     flex-grow:  1;
