--- a/blocks/form.css
+++ b/blocks/form.css
@@ -24,6 +24,7 @@
     justify-content: center;
     font-size: 16px;
     line-height: 20px;
+    gap: 12px;
 }
 
 .form__input {
@@ -46,6 +47,7 @@
     line-height: 20px;
     border-radius: 4px;
     background-color: #2F80ED;
+    color: #fff;
 }
 
 .form__input::placeholder {
