--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,61 +1,64 @@
 .form {
-    max-width: 385px;
+  max-width: 385px;
 }
 
 .form__fieldset {
-    padding: 0;
-    margin: 0;
-    border: none;
-    flex-direction: column;
+  padding: 0;
+  margin: 0;
+  border: none;
+  flex-direction: column;
 }
 
 .form__label {
-    margin-bottom: 32px;
-    font-family: "Inter", Arial, sans-serifS;
-    font-style: normal;
-    display: block;
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: 500;
+  margin-bottom: 32px;
+  font-family: "Inter", Arial, sans-serifS;
+  font-style: normal;
+  display: block;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 500;
 }
 
 .form__label_type_checkbox {
-    display: flex;
-    justify-content: center;
-    font-size: 16px;
-    line-height: 20px;
-    gap: 12px;
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+  margin-bottom: 0;
 }
 
 .form__input {
-    display: block;
-    padding: 12px;
-    width: 100%;
-    box-sizing: border-box;
-    margin-top: 8px;
-    border-radius: 4px;
+  display: block;
+  padding: 12px;
+  width: 100%;
+  box-sizing: border-box;
+  margin-top: 8px;
+  border-radius: 4px;
 }
 
 .form__button {
-    width: 100%;
-    padding: 12px;
-    font-family: "Inter", Arial, sans-serif;
-    font-style: normal;
-    margin-bottom: 32px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    border-radius: 4px;
-    background-color: #2F80ED;
-    color: #fff;
+  width: 100%;
+  padding: 12px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  margin-bottom: 32px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  border-radius: 4px;
+  background-color: #2f80ed;
+  color: #fff;
+}
+
+.form__button:hover {
+  color: #c1c1c1;
 }
 
 .form__input::placeholder {
-    color: #838383;
+  color: #838383;
 }
 
 .form__checkbox {
-    width: 20px;
-    height: 20px;
-    border-radius: 2px;
+  width: 20px;
+  height: 20px;
+  border-radius: 2px;
 }
