--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,27 +1,31 @@
 .nav {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav__logo {
-    position: relative;
-    left: -50px;
-    width: 105px;
-    height: 39px;
+  position: relative;
+  left: -50px;
+  width: 105px;
+  height: 39px;
 }
 
 .nav__link {
-    color: #000;
-    text-decoration: none;
+  color: #000;
+  text-decoration: none;
+}
+
+.nav__link:hover {
+  color: #c1c1c1;
 }
 
 .nav__links {
-    display: flex;
-    gap: 20px;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
+  display: flex;
+  gap: 20px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
 }
