--- a/blocks/form.css
+++ b/blocks/form.css
@@ -33,6 +33,8 @@
   box-sizing: border-box;
   margin-top: 8px;
   border-radius: 4px;
+  height: 60px;
+  border: 1px solid #838383;
 }
 
 .form__button {
@@ -47,10 +49,13 @@
   border-radius: 4px;
   background-color: #2f80ed;
   color: #fff;
+  transition: all 0.4s ease-in-out;
+  border: 0;
+  height: 60px;
 }
 
 .form__button:hover {
-  color: #c1c1c1;
+  opacity: 0.7;
 }
 
 .form__input::placeholder {
