--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -13,10 +13,11 @@
 .nav__link {
   color: #000;
   text-decoration: none;
+  transition: all 0.4s ease-in-out;
 }
 
 .nav__link:hover {
-  color: #c1c1c1;
+  opacity: 0.7;
 }
 
 .nav__links {
