--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -49,7 +49,7 @@
   font-size: 16px;
   line-height: 20px;
   opacity: 100%;
-  transition-timing-function: 5s ease-in-out;
+  transition: color 0.4s ease-in-out;
   color: #fff;
   font-style: normal;
   align-items: center;
