--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -13,11 +13,11 @@
 .nav__link {
   color: #000;
   text-decoration: none;
-  transition: all 0.4s ease-in-out;
+  transition: color 0.4s ease-in-out;
 }
 
 .nav__link:hover {
-  opacity: 0.7;
+  color: #838383;
 }
 
 .nav__links {
